# nostalgia

./: .hackathon-start  README.md
.github/workflows/: deploy.yml
src/backend/: .dockerignore  .env.example  Dockerfile  compose.local.yaml  compose.yaml  entrypoint.sh  main.py  pyproject.toml
src/backend/config/caddy/: Caddyfile
src/backend/nostalgia/: manage.py
src/backend/nostalgia/api/: serializers.py  urls.py  views.py
src/backend/nostalgia/core/: enums.py  models.py
src/backend/nostalgia/core/migrations/: 0001_initial.py  0002_remove_frame_order.py  0003_remove_memory_slug.py
src/backend/nostalgia/core/services/: memory.py
src/backend/nostalgia/core/services/llm/: __init__.py  client.py  prompts.py
src/backend/nostalgia/nostalgia/: asgi.py  settings.py  urls.py  wsgi.py
src/frontend/nostalgia/: .env.example  .prettierrc  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/frontend/nostalgia/src/: app.css  app.tsx  main.tsx
src/frontend/nostalgia/src/api/: config.ts
src/frontend/nostalgia/src/app/: home.tsx
src/frontend/nostalgia/src/components/: create-memory-dialog.tsx
src/frontend/nostalgia/src/constants/: api.ts  editor.ts  environment.ts  images.ts  index.ts
src/frontend/nostalgia/src/hooks/: use-editor.ts  use-hash.ts  use-image-stack.ts  use-modal.ts  use-viewer.ts
src/frontend/nostalgia/src/layouts/: editor-page-layout.tsx  editor.tsx  index.ts  root.tsx  viewer.tsx
src/frontend/nostalgia/src/lib/: authentication.ts  environment.ts  errors.ts
src/frontend/nostalgia/src/types/: editor.d.ts  (+1 more)
(+31 files in other folders)
